# Matrix_cpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json
src/: main.cmake  main.cpp  main.hpp
src/Matrix/: MathMatrix.cpp  MathMatrix.hpp  Matrix.cmake  Matrix.cpp  Matrix.hpp  Matrix_helpers.cpp  Matrix_helpers.hpp
src/tests/: Math_tests.cpp
